@@ -1,0 +1,137 @@
+/*
+ *
+ *    OPEN-XCHANGE legal information
+ *
+ *    All intellectual property rights in the Software are protected by
+ *    international copyright laws.
+ *
+ *
+ *    In some countries OX, OX Open-Xchange, open xchange and OXtender
+ *    as well as the corresponding Logos OX Open-Xchange and OX are registered
+ *    trademarks of the Open-Xchange, Inc. group of companies.
+ *    The use of the Logos is not covered by the GNU General Public License.
+ *    Instead, you are allowed to use these Logos according to the terms and
+ *    conditions of the Creative Commons License, Version 2.5, Attribution,
+ *    Non-commercial, ShareAlike, and the interpretation of the term
+ *    Non-commercial applicable to the aforementioned license is published
+ *    on the web site http://www.open-xchange.com/EN/legal/index.html.
+ *
+ *    Please make sure that third-party modules and libraries are used
+ *    according to their respective licenses.
+ *
+ *    Any modifications to this package must retain all copyright notices
+ *    of the original copyright holder(s) for the original code used.
+ *
+ *    After any such modifications, the original and derivative code shall remain
+ *    under the copyright of the copyright holder(s) and/or original author(s)per
+ *    the Attribution and Assignment Agreement that can be located at
+ *    http://www.open-xchange.com/EN/developer/. The contributing author shall be
+ *    given Attribution for the derivative code and a license granting use.
+ *
+ *     Copyright (C) 2004-2006 Open-Xchange, Inc.
+ *     Mail: info@open-xchange.com
+ *
+ *
+ *     This program is free software; you can redistribute it and/or modify it
+ *     under the terms of the GNU General Public License, Version 2 as published
+ *     by the Free Software Foundation.
+ *
+ *     This program is distributed in the hope that it will be useful, but
+ *     WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
+ *     or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License
+ *     for more details.
+ *
+ *     You should have received a copy of the GNU General Public License along
+ *     with this program; if not, write to the Free Software Foundation, Inc., 59
+ *     Temple Place, Suite 330, Boston, MA 02111-1307 USA
+ *
+ */
+
+package com.openexchange.groupware.tasks.mapping;
+
+import java.sql.PreparedStatement;
+import java.sql.ResultSet;
+import java.sql.SQLException;
+
+import com.openexchange.groupware.tasks.Task;
+import com.openexchange.groupware.tasks.Mapping.Mapper;
+
+/**
+ * Method for dealing with the status attribute of tasks.
+ * @author <a href="mailto:marcus@open-xchange.org">Marcus Klein</a>
+ */
+public final class Status implements Mapper<Integer> {
+
+    /**
+     * Singleton instance.
+     */
+    public static final Mapper<Integer> SINGLETON = new Status();
+
+    /**
+     * Prevent instanciation.
+     */
+    private Status() {
+        super();
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    public int getId() {
+        return Task.STATUS;
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    public boolean isSet(final Task task) {
+        return task.containsStatus();
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    public String getDBColumnName() {
+        return "state";
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    public void toDB(final PreparedStatement stmt, final int pos,
+        final Task task) throws SQLException {
+        stmt.setInt(pos, task.getStatus());
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    public void fromDB(final ResultSet result, final int pos,
+        final Task task) throws SQLException {
+        final int status = result.getInt(pos);
+        if (!result.wasNull()) {
+            task.setStatus(status);
+        }
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    public boolean equals(final Task task1, final Task task2) {
+        return task1.getStatus() == task2.getStatus();
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    public Integer get(final Task task) {
+        return task.getStatus();
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    public void set(final Task task, final Integer value) {
+        task.setStatus(value);
+    }
+}
